<resources>
    <string name="app_name">Marvel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Martin Goodman</string>
    <string name="nav_header_subtitle">https://www.marvel.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_a_venir">À venir</string>
    <string name="menu_liste">Liste</string>
    <string name="menu_update">Update</string>
</resources>